# personal_investing

./: ETF_universe.csv  README.md  config.yaml  pyproject.toml  requirements.txt  top100etf.txt
.github/workflows/: test-rebalance.yml
src/personal_investing/: _init_.py  config.py  data.py  dates.py  optimizer.py  providers.py  rebalance.py  regression.py  schedule.py  selection.py  universe.py
tests/: test_dates.py  test_optimizer.py  test_regression.py  test_selection.py
utils/: tickers.py
