[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-investing"
version = "0.1.0"
description = "Quarterly ETF portfolio rebalancing with mean-variance optimization and FF5 regression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "cvxpy",
  "statsmodels",
  "requests",
  "pandas_datareader",
  "python-dateutil",
  "loguru",
  "pydantic",
  "pyyaml",
  "pytest",
  "yfinance",
  "pandas-market-calendars",
  "pyarrow"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
